--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
-python-telegram-bot==20.0a6
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
+
+python-telegram-bot==20.0a6
+
+langchain
+langchain-core
+langchain-openai
+langchain-community
 openai
-transformers
-torch
+
+nest_asyncio
+
+requests
+python-dotenv
